Add admin button to sidebar

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,6 +14,7 @@
           <form method="get">
             <button type="submit" formaction="/student-login">Student</button>
             <button type="submit" formaction="/faculty-login">Faculty</button>
+            <button type="submit" formaction="/admin-login">Admin</button>
           </form>
           <p>by anurag semwal</p>
         </section>
