--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,7 +10,7 @@
     <div class="body-wrapper">
       <div class="body-wrapper-inner">
         <section class="sidebar">
-          <h1 class="sidebar-title">Login/Register</h1>
+          <h1 class="sidebar-title">User Type</h1>
           <form method="get">
             <button type="submit" formaction="/student-login">Student</button>
             <button type="submit" formaction="/faculty-login">Faculty</button>
