Complete admin functionality

--- a/views/partials/facultyHeader.ejs
+++ b/views/partials/facultyHeader.ejs
@@ -1,9 +1,9 @@
 <%- include("header.ejs") %>
 
   <div class="main-content-wrapper">
-    <h1 class="title">Faculty</h1>
+    <h1 class="title">Faculty Login</h1>
     <div class="forms-container">
-      <form class="login-register-form" method="get">
+      <!-- <form class="login-register-form" method="get">
         <button class="login-button" type="submit" formaction="/faculty-login">Login</button>
         <button class="register-button" type="submit" formaction="/faculty-register">Register</button>        
-      </form>
+      </form> -->
