--- a/public/index.css
+++ b/public/index.css
@@ -558,3 +558,65 @@ input::-webkit-inner-spin-button {
     }
   }
 }
+
+.admin-profile-wrapper {
+  box-shadow: 0 0 10px 1px gray;
+  width: 35%;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  h1 {
+    text-align: center;
+    font-size: 2rem;
+  }
+  .faculty-register-form {
+    padding: 1rem 0;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    label {
+      color: gray;
+    }
+    input {
+      font-size: 1.2rem;
+      border: none;
+      background: inherit;
+      outline: none;
+    }
+
+    .name-container,
+    .id-container,
+    .department-container,
+    .email-container,
+    .password-container {
+      display: flex;
+      flex-direction: column;
+      border: 1px solid;
+      border: 1px solid black;
+      padding: 0.5rem;
+      display: flex;
+      flex-direction: column;
+    }
+    .department-container {
+      select {
+        border: none;
+        font-size: 1.2rem;
+      }
+      select:focus {
+        outline: none;
+        border: none;
+      }
+    }
+    button {
+      background: steelblue;
+      color: white;
+      border: none;
+      padding: 0.5rem;
+      font-size: 1.25rem;
+      transition: all 200ms ease-in-out;
+    }
+    button:hover {
+      background: rgb(59, 110, 152);
+    }
+  }
+}
